--- a/views/partials/stylesheets/colours.ejs
+++ b/views/partials/stylesheets/colours.ejs
@@ -1,5 +1,7 @@
 <style>
-    .bg-red {
-        background-color: red;
-    }
+    .bg-red {background-color: red;}
+    .bg-blue {background-color: blue;}
+
+    .fg-white { color:white;}
+    .fg-black { color:black;}
 </style>
