--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,8 +1,9 @@
 <% include stylesheets/nav-style.ejs %>
 <div class="nav-bar">
     <ul>
-        <li><a>Home</a></li>
-        <li><a>Enter</a></li>
-        <li><a>Search</a></li>
+        <li id="home"><a href="/">Home</a></li>
+        <li id="insert"><a href="/insert">Enter</a></li>
+        <li id="search"><a href="/search">Search</a></li>
+        <li id="about" style="float: right"><a href="/about">About Project</a></li>
     </ul>
 </div>
