--- a/views/partials/stylesheets/layouts.ejs
+++ b/views/partials/stylesheets/layouts.ejs
@@ -17,4 +17,34 @@
     .row { flex-direction: column; }
 
     .center { text-align: center; }
+
+    .border { border: solid 1px black; }
+
+    table {  
+        color: #333;
+        font-family: Helvetica, Arial, sans-serif; 
+        width: 100%;
+        border-collapse: 
+        collapse; border-spacing: 0; 
+    }
+
+    td, th {  
+        border: 1px solid transparent;
+        height: 30px; 
+        transition: all 0.3s;
+    }
+
+    th {  
+        background: #DFDFDF; 
+        font-weight: bold;
+    }
+
+    td {  
+        background: #FAFAFA;
+        text-align: center;
+    }
+       
+    tr:nth-child(even) td { background: #F1F1F1; }          
+    tr:nth-child(odd) td { background: rgb(214, 214, 214); }  
+    tr td:hover { background: #666; color: #FFF; }  
 </style>
