--- a/views/partials/info-blocks/contact.ejs
+++ b/views/partials/info-blocks/contact.ejs
@@ -17,12 +17,20 @@
         <tr>
             <td>Leo Tian</td>
             <td>SQL</td>
+            <td>null</td>
+            <td>null</td>
         </tr>
         <tr>
             <td>Jason Kang</td>
+            <td>Schema</td>
+            <td>null</td>
+            <td>null</td>
         </tr>
         <tr>
             <td>Damian Tylewsli</td>
+            <td>Development</td>
+            <td>null</td>
+            <td>null</td>
         </tr>
     </table>
 </div>
