--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -19,9 +19,10 @@
 					<h2 class="fg-white center" style="margin-top: 5%; margin-bottom: 5%;">Table View</h2>
 
 					<form>
-						<select>
-							<option>Customers</option>
-							<option>Menu</option>
+						<select id="table_changer">
+							<option>customer</option>
+							<option>menu</option>
+							<option>employee</option>
 						</select>
 					</form>
 
@@ -43,27 +44,47 @@
 	<script>
 		document.getElementById("home").classList.add("active");
 
-		$.getJSON('/test', (data) => {
-				document.getElementById("query-results").innerHTML = buildTable(data);
+		getTable();
+
+		 $(document).ready(function(){
+			$("#table_changer").on("change", () => {
+				var table_name=document.getElementById("table_changer").value;
+				$.post("http://localhost:3000/test", {table: table_name}, (data) => {
+					document.getElementById("query-results").innerHTML = buildTable(data);
+					console.log(data)
+				});
+			});
 		});
 
+		function getTable() {
+			var table_name=document.getElementById("table_changer").value;
+			$.post("http://localhost:3000/test", {table: table_name}, (data) => {
+				document.getElementById("query-results").innerHTML = buildTable(data);
+				console.log(data)
+			});
+		}
+
+
 		function buildTable(data) {
-			var table = `
-				<table>
-					<tr>
-						<th>First Name</th>
-						<th>Last Name</th>
-					</tr>	
-				`
-				data.forEach((row) => {
-					table += `
-						<tr>
-							<td>` + row.firstName + `</td>
-							<td>` + row.lastName + `</td>
-						</tr>`
-				});
-				table += `</table>`;
-				return table;
+			var table = `<table><tr>`
+			for (var property in data[0]) {
+				if (data[0].hasOwnProperty(property)) {
+					table += `<th>` + property.toUpperCase() + `</th>`;
+				}
+			}
+			table += `</tr>`;	
+				
+			data.forEach((row) => {
+				table += `<tr>`;
+					for (var property in row) {
+						if (row.hasOwnProperty(property)) {
+							table += `<td>` + row[property] + `</td>`;
+						}
+					}
+				table += `</tr>`;
+			});
+			table += `</table>`;
+			return table;
 		}
 		
 	</script>
