--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -23,6 +23,13 @@
 							<option>customer</option>
 							<option>menu</option>
 							<option>employee</option>
+							<option>stock</option>
+							<option>serve</option>
+							<option>transaction_record</option>
+							<option>takes_from</option>
+							<option>may_contain</option>
+							<option>reads_from</option>
+							<option>cook_from</option>
 						</select>
 					</form>
 
