--- a/views/partials/info-blocks/contact.ejs
+++ b/views/partials/info-blocks/contact.ejs
@@ -28,7 +28,7 @@
         </tr>
         <tr>
             <td>Damian Tylewsli</td>
-            <td>Development</td>
+            <td>Table Population</td>
             <td>null</td>
             <td>null</td>
         </tr>
