--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -2,9 +2,9 @@
 <div class="nav-bar">
     <ul>
         <li id="home"><a href="/">Home</a></li>
-        <li id="insert"><a href="/insert">Enter</a></li>
+        <!-- <li id="insert"><a href="/insert">Enter</a></li> -->
         <li id="search"><a href="/search">Search</a></li>
-        <li id="pos"><a href="/pos">Point of Sale System</a></li>
+        <!-- <li id="pos"><a href="/pos">Point of Sale System</a></li> -->
         <li id="about" style="float: right"><a href="/about">About Project</a></li>
     </ul>
 </div>
